<resources>
    <string name="app_name">UrduFontComparator</string>
    <string name="app_name_expanded">Urdu Font Comparator</string>

    <!-- Licenses -->
    <string name="license_screen_title">Open-Source Licenses</string>

    <!-- Credits -->
    <string name="credits_text">Visit Credits page %s</string>

    <!-- About Us -->
    <string name="project_description">This application allows users to explore and compare various Urdu Fonts, eventually helping them in choosing the best one. \n\nThis project is additionally focused to make users appreciate why Nasta\'liq script should be a preferred choice for Urdu content on mobile devices.</string>
    <string name="project_github_comment">The source code is also available as open-source on GitHub %s</string>
    <string name="project_blog_page_mention">You can read more about the project here %s</string>
    <string name="brand_name">Androidistan Apps</string>
    <string name="brand_email">wahib.myapps@gmail.com</string>
    <string name="dev_wahib_name">Wahib-Ul-Haq</string>
    <string name="dev_wahib_url">http://wahibhaq.com</string>
    <string name="dev_wahib_email">wahib.tech@gmail.com</string>
    <string name="dev_wahib_twitter">\@wahibhaq</string>
    <string name="dev_zeeshan_name">Zeeshan Shabbir</string>
    <string name="dev_zeeshan_url">https://github.com/ZeeshanShabbir</string>
    <string name="dev_zeeshan_email">zeeshan.shabbir79@gmail.com</string>

    <!-- General -->
    <string name="select_font">Select Font</string>
    <string name="font_details">Font Details</string>
    <string name="not_available">"Not Available"</string>

    <!-- Urdu Font Names -->
    <string name="label_urdu_font_meher_nastaleeq">Meher Nastaleeq</string>
    <string name="label_urdu_font_jameel_noori_nastaleeq">Jameel Noori Nastaleeq</string>
    <string name="label_urdu_font_jameel_noori_nastaleeq_kasheeda">Jameel Noori Nastaleeq Kasheeda</string>
    <string name="label_urdu_font_pakistan_nastaleeq">Pakistan Nastaleeq</string>
    <string name="label_urdu_font_fajer_noori_nastaleeq">Fajer Noori Nastaleeq</string>
    <string name="label_urdu_font_urdu_naskh_asiatype">Urdu Naskh Asiatype</string>
    <string name="label_urdu_font_noto_nastaliq_urdu">Noto Nastaliq Urdu</string>
    <string name="label_urdu_font_noto_naskh_arabic">Noto Naskh Arabic</string>
    <string name="label_urdu_font_nafees_nastaleeq">Nafees Nastaleeq</string>
    <string name="label_urdu_font_nafees_riqa">Nafees Riqa</string>

    <!-- Urdu Sample Text -->
    <string name="urdu_sample_text_poetry_1">
سلیقے سے ہواؤں میں جو خوشبو گھول سکتے ہیں\n
ابھی کچھ لوگـ باقی ہیں جو اُردو بول سکتے ہیں</string>

    <string name="urdu_sample_text_poetry_2">
    تو رہ نوردِ شوق ہے منزل نہ کر قبول\n
لیلیٰ بھی ہم نشیں ہو تو محمل نہ کر قبول
    </string>

    <string name="urdu_sample_text_poetry_3">
    گیسوئےِ اردو  ابھی  مِنّت  پذیرِ  شانہ  ہے\n
شمع  یہ  سودائیِ  دل  سوزئِ  پروانہ  ہے
    </string>

    <string name="urdu_sample_text_poetry_4">
    بعدِ نفرت  پھر موحبّت  کو  زُبان  درکار  ہے\n
پھر عزیزِ جان  وہی  اردو  ُزبان  ہونے  لگی
    </string>

    <string name="urdu_sample_text_poetry_5">
      نہیں کھیل اے داغ یاروں سے کہ دو\n
کہ آتی ہے اُردو زباں آتے آتے
    </string>

    <string name="urdu_sample_text_bold">اردو رسم الخط زبان کی ساری مروج آوازوں کی نمائندگی کرتا ہے۔ اردو کے حروف بناوٹ کے لحاظ سے حددرجہ سادہ اور اشکال کے اعتبار سے بہت کم ہیں ۔ اردو زبان اپنے الفاظ کی بناوٹ کی بناء پر دنیا کی ہر زبان کے مقابلہ میں لکھنے ، پڑھنے اور سیکھنے کے حوالے سے آسان ترین زبان ہے۔</string>

    <string name="urdu_sample_text_alphabets">ا آ ب پ ت ٹ ث ج چ ح خ د ڈ ذ ر ڑ ز ژ س ش ص ض ط ظ ع غ ف ق ک گ ل م ن ں و ه ی ے ئ ء</string>

    <string name="line_spacing_with_dash">"\n-------------\n"</string>

    <string name="line_spacing">"\n"</string>

    <!-- Actionbar Overflow Menu -->
    <string name="menu_about_us">About Us</string>
    <string name="menu_licenses">Licenses</string>
    <string name="menu_credits">Credits</string>
    <string name="menu_contact">Send Feedback</string>
    <string name="menu_contact_via_email">Email</string>
    <string name="menu_contact_via_tweet">Tweet</string>
    <string name="menu_contact_email_subject">My Feedback</string>
    <string name="menu_share_with_a_friend">Share with a friend</string>
    <string name="share_app_url_message">Checkout \"%1$s\" app %2$s</string>
    <string name="menu_rate_app">Rate this app</string>

    <!-- Font Info Dialog -->
    <string name="button_got_it">GOT IT</string>
    <string name="dialog_font_provider_label">Provided By: %s</string>
    <string name="dialog_font_website_label">Website: %s</string>
    <string name="dialog_font_filename_label">Filename: %s</string>
    <string name="dialog_font_size_label">File Size: %s</string>
    <string name="dialog_font_rating"> %1$s (%2$d votes)</string>

    <!-- Rate Font Dialog -->
    <string name="button_submit">SUBMIT</string>
    <string name="button_cancel">NO, THANKS</string>
    <string name="rate_font_dialog_title">Rate %s Font</string>
    <string name="rate_font_dialog_message">Hi, kindly rate this font on the basis of its attractiveness, aesthetics and readability. Your feedback will assist other users in making a more informed decision.</string>

    <!-- Alerts -->
    <string name="loading_message">Loading ........</string>
    <string name="error_message_generic">Apologies, something doesn\'t look right.</string>
    <string name="error_message_unknown_font">Apologies, selected Font is Unknown.</string>
    <string name="select_font_size">Select Font Size</string>
    <string name="email_client_app_not_found">Email client application was not found on your device</string>
    <string name="twitter_client_app_not_found">Twitter client application was not found on your device</string>
    <string name="sharing_client_not_found">Sharing is not natively supported on your device</string>
    <string name="connection_error">Seems like you don\'t have an Internet Connection!</string>
    <string name="rate_this_font">Rate this font</string>
    <string name="button_ok">OK</string>
    <string name="fonts">fonts</string>
    <string name="thank_you">Thank You for Rating!</string>
    <string name="error_unable_to_fetch_fonts">Apologies, failed to load Fonts due to a database error.</string>
    <string name="error_unable_to_update_rating">Apologies, unable to submit Rating. Kindly check your Internet Connection and try again.</string>
    <string name="font_rating_result">Rating :</string>

    <!-- Splash screen -->
    <string name="app_version_name">App Version: %s</string>

</resources>
