<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <group
        android:id="@+id/menu_overflow"
        android:visible="true">

        <item
            android:id="@+id/action_licenses"
            android:title="@string/menu_licenses"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_about_dev"
            android:title="@string/menu_about_devs"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_credits"
            android:title="@string/menu_credits"
            app:showAsAction="never" />

        <item
            android:id="@+id/action_contact_us"
            android:title="@string/menu_contact"
            app:showAsAction="never">
            <menu>
                <item
                    android:id="@+id/action_email"
                    android:title="@string/menu_contact_via_email"
                    app:showAsAction="never" />
                <item
                    android:id="@+id/action_tweet"
                    android:title="@string/menu_contact_via_tweet"
                    app:showAsAction="never" />
            </menu>

        </item>
        <item
            android:id="@+id/action_share"
            android:title="@string/menu_share_with_a_friend"
            android:actionProviderClass="android.widget.ShareActionProvider"
            app:showAsAction="never"/>
    </group>
</menu>
